--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
@@ -6,6 +6,25 @@
   border-radius: @borderRadius;
 }
 
+.barChartHover {
+  width: 450px;
+  height: @barWidth * 2 + @barPadding;
+
+  &:hover .outerGlow {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
 .outerGlow {
   text-shadow: 0 0 3px #fff;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.grid {
+
+  .barchart {
+      padding-bottom: 0;
+  }
 }
