--- a/public/src/app/content/shared/map-content/map-content.component.html
+++ b/public/src/app/content/shared/map-content/map-content.component.html
@@ -3,7 +3,7 @@
 <div class="grid">
 
     <!--<div class="info-box" *ngIf="city">-->
-  <h3>{{city}} ({{votes}} Vorkommen)</h3>
+  <h3>{{city}} &nbsp;<span class="h3_value">{{votes}} Vorkommen</span></h3>
     <!--</div>-->
 
     <div id="map">
