--- a/public/src/app/content/shared/time-content/time-content.component.html
+++ b/public/src/app/content/shared/time-content/time-content.component.html
@@ -1,6 +1,11 @@
-<h2>Auswirkung deiner Uhrzeit</h2>
+<h2>{{h3.headline}}
+    &nbsp;<span class="tooltip"><fa class="infoIcon" name="info-circle" size="1"></fa>
 
-<!--TODO TIME CHART-->
+        <span class="tooltiptext {{h3.class}}">{{h3.tooltip}}</span>
+
+    </span>
+</h2>
+
 <div class="grid">
 
     <div *ngFor="let model of timeModels">
