--- a/public/src/app/content/your-result-content/your-result-content.component.html
+++ b/public/src/app/content/your-result-content/your-result-content.component.html
@@ -24,7 +24,8 @@
     </app-keyword-barchar-content>
 
     <div class="grid">
-        <app-time-content [time]="yourResultContent.time"></app-time-content>
+        <app-time-content [time]="yourResultContent.time"
+                          [h3]="timeChartHeadline"></app-time-content>
     </div>
 
 </div>
