--- a/public/src/style/colors.less
+++ b/public/src/style/colors.less
@@ -13,6 +13,8 @@
 @darkGrey: #262323;
 @lightGrey: #F1F1F1;
 @grey: #6D6D6D;
+@tooltipBackground: lighten(#262323, 15%);
+
 
 @jodelColors:
         orange @orange,
