toggle percentage animation

--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
@@ -11,15 +11,17 @@
   height: @barWidth * 2 + @barPadding;
 
   &:hover .outerGlow {
-    visibility: visible;
+    //visibility: visible;
     opacity: 1;
   }
 }
 
 .outerGlow {
   text-shadow: 0 0 3px #fff;
-  visibility: hidden;
+  //visibility: hidden;
   opacity: 0;
+
+  transition: opacity 140ms ease-in-out;
 }
 
 .grid {
