--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -1505,13 +1505,12 @@ select option {
   height: 20px;
 }
 .barChartHover:hover .outerGlow {
-  visibility: visible;
   opacity: 1;
 }
 .outerGlow {
   text-shadow: 0 0 3px #fff;
-  visibility: hidden;
   opacity: 0;
+  transition: opacity 140ms ease-in-out;
 }
 .grid .barchart {
   padding-bottom: 0;
