added average symbol

--- a/public/src/app/content/keyword-content/keyword-content.component.html
+++ b/public/src/app/content/keyword-content/keyword-content.component.html
@@ -26,7 +26,7 @@
 <div class="col-3">
 
     <app-keyword-barchar-content [keywordBarchartArray]="keywordContent.similiarKeywords"
-                                 [headline]="'Ähnliche Schlagworte und deren Popularität'">
+                                 [headline]="'Ähnliche Schlagworte'">
     </app-keyword-barchar-content>
 
 </div>
