--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.html
@@ -1,6 +1,6 @@
 <div class="grid barchart">
 
-        <h3>{{title}} &nbsp;<span class="h3_value">{{value.toString() || "0"}} {{unit}}</span></h3>
+        <h3>{{title}} &nbsp;<span class="h3_value">{{average ? 'Ø ' : '' }} {{value.toString() || "0"}} {{unit}}</span></h3>
 
         <div class="barChartHover">
 
