--- a/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
+++ b/public/src/app/content/shared/keywords-barchar/keyword-barchart-content.component.html
@@ -4,5 +4,6 @@
                [value]="keyword.value"
                [color]="keyword.color"
                [title]="keyword.keyword"
-               [maxValue]="keyword.maxValue">
+               [maxValue]="keyword.maxValue"
+               [average]="true">
 </app-bar-chart>
