--- a/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
+++ b/public/src/app/content/shared/chart/bar-chart/bar-chart.component.less
@@ -21,6 +21,8 @@
   //visibility: hidden;
   opacity: 0;
 
+  font-family: 'Fira Sans Condensed', sans-serif;
+
   transition: opacity 140ms ease-in-out;
 }
 
